release notes for release 0.4.0 Fluorine
========================================

2013-06-29 - AKHE Added clone button to session window in VSCP Works
2013-05-30 - AKHE Changed writeVscpEventToStringEx to writeVscpEventExToString 
                  in VSCP helper lib. This will break some software compiles. 
                  Sorry for that.
		  All methods now in helper lib for Linux.

			Changed filder helper_dll to helperlib
2013-05-29 - AKHE Added Level I socketcan driver.
2013-05-28 - AKHE driver config <parameter> has been changed to <config>
			Default path for varibles has been moved to /srv/vscp/variable.xml
			Deafult path for dm has been moved to /srv/vscp/dm.xml
			rootpath changed to webrootpath in configuration file
2013-05-20 - AKHE Binary mode removed from TCP/IP interface. The Nova code for the Modtronix SBC68C board still have binary code in it. This code does not work anymore.
2013-05-20 - AKHE udp broadcast is no longer part of daemon. Use
			raw Ethernet interface or udp driver
			instead.
2013-05-14 - AKHE Removed old code, old boot loader wizard etc
2012-10-23 - AKHE Fixed problem with link clicks in configuration status window.
2012-10-23 - AKHE 0.4.0.3
2012-10-23 - AKHE GUID's can now be saved and loaded in configuration window.
					Full Level II Works.
2012-10-22 - AKHE VSCP works now have configuration of register read/write 
					parameters. Build: 4.0.0.2
				  Confirm of rx-list delete can now be disabled.
				  Numerical Base for numbers can now be configured.
				  Log fle can be configured
2012-10-17 - AKHE VSCP Works interfaces are now dynamic and stored by name.
2012-10-01 - AKHE VSCP Works now handle indexed storage for dm and abstractions.
2012-09-30 - AKHE VSCP Works now handles pages.
2012-09-18 - AKHE Dinesh Guleria contributed VSCP bootloader support for VSCP Works.
2012-09-17 - AKHE Deamon local webserver added.
2012-09-16 - AKHE Websocket interface now works on Linux/Unix to.